--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ strawberry-graphql = "^0.216.1"
 fastapi = "^0.105.0"
 uvicorn = "^0.24.0.post1"
 pydantic = "^2.5.2"
+rich = "^13.7.0"
+typer = "^0.9.0"
+libcst = "^1.1.0"
 
 
 [build-system]
